--- a/membership-1.html
+++ b/membership-1.html
@@ -65,7 +65,7 @@
 		<div class="header__bottom">
 			<div class="container">
 				<nav class="navbar navbar-expand-lg">
-					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo-1.png" alt="logo"></a>
+					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo.png" width="100px" alt="logo"></a>
 					<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler--icon"></span>
 					</button>
