--- a/policy-1.html
+++ b/policy-1.html
@@ -21,16 +21,7 @@
 </head>
 
 <body>
-	<!-- preloader start here -->
-    <div class="preloader">
-        <div class="preloader-inner">
-            <div class="preloader-icon">
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </div>
-	<!-- preloader ending here -->
+	
 
 
 	<!-- scrollToTop start here -->
@@ -43,7 +34,7 @@
 		<div class="header__bottom">
 			<div class="container">
 				<nav class="navbar navbar-expand-lg">
-					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo-1.png" alt="logo"></a>
+					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo.png" width="100px" alt="logo"></a>
 					<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler--icon"></span>
 					</button>
