--- a/contact-1.html
+++ b/contact-1.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- site favicon -->
-	<link rel="icon" type="image/png" href="assets/images/favicon-1.png">
+	<link rel="icon" type="image/png" href="assets/images/logo/logo.png">
 	<!-- Place favicon.ico in the root directory -->
 
 	<!-- All stylesheet and icons css  -->
@@ -27,86 +27,24 @@
     <a href="#" class="scrollToTop"><i class="fa-solid fa-angle-up"></i></a>
     <!-- scrollToTop ending here -->
 
-
-    <!-- ================> header section start here <================== -->
-    <header class="header" id="navbar">
-        <div class="header__top d-none d-lg-block">
-			<div class="container">
-				<div class="header__top--area">
-					<div class="header__top--left">
-						<ul>
-                            <li>
-                                <i class="fa-solid fa-phone"></i> <span>+800-123-4567 6587</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-location-dot"></i> Beverley, New York 224 USA
-                            </li>
-                        </ul>
-					</div>
-					<div class="header__top--right">
-						<ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
-                            <li><a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-                        </ul>
-					</div>
-				</div>
-			</div>
-		</div>
+	<header class="header" id="navbar">
 		<div class="header__bottom">
 			<div class="container">
 				<nav class="navbar navbar-expand-lg">
-					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo.png" width="100px" alt="logo"></a>
+					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo.png" width="90px" alt="logo"></a>
 					<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler--icon"></span>
 					</button>
 					<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 						<div class="navbar-nav mainmenu">
 							<ul>
-								<li>
-									<a href="#0">Home</a>
-									<ul>
-										<li><a href="index-1.html">Home Page One</a></li>
-										<li><a href="index-2-1.html">Home Page Two</a></li>
-										<li><a href="index-3-1.html">Home Page Three</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Pages</a>
-									<ul>
-										<li><a href="about-1.html">About Us</a></li>
-                                        <li><a href="membership-1.html">Membership</a></li>
-                                        <li><a href="comingsoon-1.html">comingsoon</a></li>
-                                        <li><a href="404-1.html">404</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Community</a>
-									<ul>
-										<li><a href="community-1.html">Community</a></li>
-										<li><a href="group-1.html">All Group</a></li>
-										<li><a href="members-1.html">All Members</a></li>
-										<li><a href="activity-1.html">Activity</a></li>
-
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Shops</a>
-									<ul>
-										<li><a href="shop-1.html">Product</a></li>
-										<li><a href="shop-single-1.html">Product Details</a></li>
-										<li><a href="shop-cart-1.html">Product Cart</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Blogs</a>
-									<ul>
-										<li><a href="blog-1.html">Blog</a></li>
-										<li><a href="blog-2-1.html">Blog Style Two</a></li>
-										<li><a href="blog-single-1.html">Blog Details</a></li>
-									</ul>
-								</li>
-								<li class="active"><a href="contact-1.html">contact</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="http://datenight-events.de/">Register</a></li>
+								<li><a href="">About Us</a></li>
+								
+								<li><a href="contact-1.html">Events</a></li>
+								<li><a href="contact-1.html">contact Us</a></li>
+								
 							</ul>
 						</div>
 						<div class="header__more">
@@ -121,7 +59,6 @@
 			</div>
 		</div>
     </header>
-    <!-- ================> header section end here <================== -->
 
 
 
