--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 						<div class="header__more">
                             <button class="default-btn dropdown-toggle" type="button" id="moreoption" data-bs-toggle="dropdown" aria-expanded="false">My Account</button>
                             <ul class="dropdown-menu" aria-labelledby="moreoption">
-                                <li><a class="dropdown-item" href="login-1.html">Log In</a></li>
-                                <li><a class="dropdown-item" href="register-1.html">Sign Up</a></li>
+                                <li><a class="dropdown-item" href="http://datenight-events.de/">Log In</a></li>
+                                <li><a class="dropdown-item" href="http://datenight-events.de/">Sign Up</a></li>
                             </ul>
 						</div>
 					</div>
