--- a/group.html
+++ b/group.html
@@ -2071,7 +2071,7 @@
 		<div class="footer__bottom py-4">
 			<div class="container">
 				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: CodexCoder</p>
+					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
 				</div>
 			</div>
 		</div>
