--- a/index-3.html
+++ b/index-3.html
@@ -1051,7 +1051,7 @@
 				<div class="row g-4 g-lg-0 justify-content-lg-between align-items-center">
 					<div class="col-lg-6 col-12">
 						<div class="footer__content text-center">
-							<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: CodexCoder</p>
+							<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-12">
