--- a/policy.html
+++ b/policy.html
@@ -378,7 +378,7 @@
 		<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
 			<div class="container">
 				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: CodexCoder</p>
+					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
 				</div>
 			</div>
 		</div>
