--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- site favicon -->
-	<link rel="icon" type="image/png" href="assets/images/favicon.png">
+	<link rel="icon" type="image/png" href="assets/images/logo/logo.png">
 	<!-- Place favicon.ico in the root directory -->
 
 	<!-- All stylesheet and icons css  -->
@@ -41,7 +41,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="http://datenight-events.de/">Register</a></li>
-								<li><a href="">About Us</a></li>
+								<li><a href="about.html">About Us</a></li>
 								
 								<li><a href="contact-1.html">Events</a></li>
 								<li><a href="contact-1.html">contact Us</a></li>
