--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
 								<li><a href="http://datenight-events.de/">Register</a></li>
 								<li><a href="about.html">About Us</a></li>
 								
-								<li><a href="contact-1.html">Events</a></li>
-								<li><a href="contact-1.html">contact Us</a></li>
+								<li><a href="http://datenight-events.de/events">Events</a></li>
+								<li><a href="contact.html">contact Us</a></li>
 								
 							</ul>
 						</div>
@@ -440,7 +440,7 @@
 								</div>
 							</div>
 							<div class="col">
-								<button type="submit" class="default-btn reverse d-block"><span>Find Your Partner</span></button>
+								<button type="submit" class="default-btn reverse d-block"><span>Book An Event</span></button>
 							</div>
 						</div>
 					</div>
@@ -451,8 +451,8 @@
     <!-- ================> About section end here <================== -->
 
 
-	<!-- ================> Member section start here <================== -->
-	<div class="member member--style3 padding-top padding-bottom">
+	
+	<!-- <div class="member member--style3 padding-top padding-bottom">
 		<div class="container">
 			<div class="section__header style-2 text-center wow fadeInUp" data-wow-duration="1.5s">
 				<h2>Only True People</h2>
@@ -554,7 +554,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
+	<!-- ================> Member section start here <================== -->
     <!-- ================> Member section end here <================== -->
 
 
@@ -912,7 +913,7 @@
 
     <!-- ================> Footer section start here <================== -->
 	<footer class="footer footer--style3">
-		<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg-2.jpg)">
+		<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg6.png)">
 			<div class="footer__toparea padding-top padding-bottom">
 				<div class="container">
 					<div class="row g-4">
