--- a/contact.html
+++ b/contact.html
@@ -28,92 +28,31 @@
     <!-- scrollToTop ending here -->
 
 
-    <!-- ================> header section start here <================== -->
-    <header class="header" id="navbar">
-        <div class="header__top d-none d-lg-block">
-			<div class="container">
-				<div class="header__top--area">
-					<div class="header__top--left">
-						<ul>
-                            <li>
-                                <i class="fa-solid fa-phone"></i> <span>+800-123-4567 6587</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-location-dot"></i> Beverley, New York 224 USA
-                            </li>
-                        </ul>
-					</div>
-					<div class="header__top--right">
-						<ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
-                            <li><a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-                        </ul>
-					</div>
-				</div>
-			</div>
-		</div>
+	<header class="header" id="navbar">
 		<div class="header__bottom">
 			<div class="container">
 				<nav class="navbar navbar-expand-lg">
-					<a class="navbar-brand" href="index.html"><img src="assets/images/logo/logo.png" alt="logo"></a>
+					<a class="navbar-brand" href="index-1.html"><img src="assets/images/logo/logo.png" width="90px" alt="logo"></a>
 					<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler--icon"></span>
 					</button>
 					<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 						<div class="navbar-nav mainmenu">
 							<ul>
-								<li>
-									<a href="#0">Home</a>
-									<ul>
-										<li><a href="index.html">Home Page One</a></li>
-										<li><a href="index-2.html">Home Page Two</a></li>
-										<li><a href="index-3.html">Home Page Three</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Pages</a>
-									<ul>
-										<li><a href="about.html">About Us</a></li>
-                                        <li><a href="membership.html">Membership</a></li>
-                                        <li><a href="comingsoon.html">comingsoon</a></li>
-                                        <li><a href="404.html">404</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Community</a>
-									<ul>
-										<li><a href="community.html">Community</a></li>
-										<li><a href="group.html">All Group</a></li>
-										<li><a href="members.html">All Members</a></li>
-										<li><a href="activity.html">Activity</a></li>
-
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Shops</a>
-									<ul>
-										<li><a href="shop.html">Product</a></li>
-										<li><a href="shop-single.html">Product Details</a></li>
-										<li><a href="shop-cart.html">Product Cart</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#0">Blogs</a>
-									<ul>
-										<li><a href="blog.html">Blog</a></li>
-										<li><a href="blog-2.html">Blog Style Two</a></li>
-										<li><a href="blog-single.html">Blog Details</a></li>
-									</ul>
-								</li>
-								<li class="active"><a href="contact.html">contact</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="http://datenight-events.de/">Register</a></li>
+								<li><a href="about.html">About Us</a></li>
+								
+								<li><a href="http://datenight-events.de/events">Events</a></li>
+								<li><a href="contact.html">contact Us</a></li>
+								
 							</ul>
 						</div>
 						<div class="header__more">
                             <button class="default-btn dropdown-toggle" type="button" id="moreoption" data-bs-toggle="dropdown" aria-expanded="false">My Account</button>
                             <ul class="dropdown-menu" aria-labelledby="moreoption">
-                                <li><a class="dropdown-item" href="login.html">Log In</a></li>
-                                <li><a class="dropdown-item" href="register.html">Sign Up</a></li>
+                                <li><a class="dropdown-item" href="login-1.html">Log In</a></li>
+                                <li><a class="dropdown-item" href="register-1.html">Sign Up</a></li>
                             </ul>
 						</div>
 					</div>
@@ -121,7 +60,6 @@
 			</div>
 		</div>
     </header>
-    <!-- ================> header section end here <================== -->
 
 
 
@@ -244,45 +182,10 @@
 
 
 
-    <!-- ================> Footer section start here <================== -->
-	<footer class="footer footer--style2">
-		<div class="footer__top bg_img" style="background-image: url(assets/images/footer/bg.jpg)">
-			<div class="footer__newsletter">
-				<div class="container">
-					<div class="row g-4 justify-content-center">
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area">
-								<div class="footer__newsletter--title">
-									<h4>Newsletter Sign up</h4>
-								</div>
-								<div class="footer__newsletter--form">
-									<form action="#">
-										<input type="email" placeholder="Your email address">
-										<button type="submit" class="default-btn"><span>Subscribe</span></button>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area justify-content-xxl-end">
-								<div class="footer__newsletter--title me-xl-4">
-									<h4>Join Community</h4>
-								</div>
-								<div class="footer__newsletter--social">
-									<ul>
-										<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer__toparea padding-top padding-bottom wow fadeInUp" data-wow-duration="1.5s">
+   <!-- ================> Footer section start here <================== -->
+	<footer class="footer footer--style3">
+		<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg6.png)">
+			<div class="footer__toparea padding-top padding-bottom">
 				<div class="container">
 					<div class="row g-4">
 						<div class="col-lg-3 col-sm-6 col-12">
@@ -415,10 +318,25 @@
 			</div>
 		</div>
 		
-		<div class="footer__bottom py-4">
+		<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
 			<div class="container">
-				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+				<div class="row g-4 g-lg-0 justify-content-lg-between align-items-center">
+					<div class="col-lg-6 col-12">
+						<div class="footer__content text-center">
+							<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+						</div>
+					</div>
+					<div class="col-lg-6 col-12">
+						<div class="footer__newsletter--social">
+							<ul class="justify-content-center justify-content-lg-end">
+								<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
