--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 								<li><a href="http://datenight-events.de/">Register</a></li>
 								<li><a href="about.html">About Us</a></li>
 								
-								<li><a href="contact-1.html">Events</a></li>
-								<li><a href="contact-1.html">contact Us</a></li>
+								<li><a href="http://datenight-events.de/events">Events</a></li>
+								<li><a href="contact.html">contact Us</a></li>
 								
 							</ul>
 						</div>
@@ -73,7 +73,7 @@
 							<div class="banner__title">
 								<h2>New Places, Unforgettable Dating.</h2>
 								<p>Join our international family today! Please call us for more info.</p>
-								<a href="membership.html" class="default-btn style-2"><span>Register An Account</span></a>
+								<a href="http://datenight-events.de/events" class="default-btn style-2"><span>Book  An Event</span></a>
 							</div>
 						</div>
 					</div>
@@ -527,7 +527,7 @@
 										</div>
 									</div>
 								</div>
-								<button type="submit" class="default-btn reverse d-block"><span>Find Your Partner</span></button>
+								<button type="submit" class="default-btn reverse d-block"><span>Book an Event</span></button>
 							</form>
 						</div>
 					</div>
@@ -536,71 +536,6 @@
 		</div>
 	</div>
 	
-	<div class="about padding-top padding-bottom">
-		<div class="container">
-			<div class="section__header style-2 text-center wow fadeInUp" data-wow-duration="1.5s">
-				<h2>It All Starts With A Date</h2>
-				<p>Learn from them and try to make it to this board. This will for sure boost you visibility and increase your chances to find you loved one.</p>
-			</div>
-			<div class="section__wrapper">
-				<div class="row g-4 justify-content-center row-cols-xl-4 row-cols-lg-3 row-cols-sm-2 row-cols-1">
-					<div class="col wow fadeInUp" data-wow-duration="1.5s">
-						<div class="about__item text-center">
-							<div class="about__inner">
-								<div class="about__thumb">
-									<img src="assets/images/about/icon/01.png" alt="dating thumb">
-								</div>
-								<div class="about__content">
-									<h3><span class="counter" data-to="990960" data-speed="1500"></span></h3>
-									<p>Members in Total</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col wow fadeInUp" data-wow-duration="1.6s">
-						<div class="about__item text-center">
-							<div class="about__inner">
-								<div class="about__thumb">
-									<img src="assets/images/about/icon/02.png" alt="dating thumb">
-								</div>
-								<div class="about__content">
-									<h3><span class="counter" data-to="628590" data-speed="1500"></span></h3>
-									<p>Members Online</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col wow fadeInUp" data-wow-duration="1.7s">
-						<div class="about__item text-center">
-							<div class="about__inner">
-								<div class="about__thumb">
-									<img src="assets/images/about/icon/03.png" alt="dating thumb">
-								</div>
-								<div class="about__content">
-									<h3><span class="counter" data-to="314587" data-speed="1500"></span></h3>
-									<p>Women Online</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col wow fadeInUp" data-wow-duration="1.8s">
-						<div class="about__item text-center">
-							<div class="about__inner">
-								<div class="about__thumb">
-									<img src="assets/images/about/icon/04.png" alt="dating thumb">
-								</div>
-								<div class="about__content">
-									<h3><span class="counter" data-to="102369" data-speed="1500"></span></h3>
-									<p>Men Online</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-    <!-- ================> About section end here <================== -->
 
 
 	<!-- ================> Story section start here <================== -->
@@ -926,187 +861,166 @@
 	</div>
     <!-- ================> App section end here <================== -->
 
-
-    <!-- ================> Footer section start here <================== -->
-	<footer class="footer footer--style2">
-		<div class="footer__top bg_img" style="background-image: url(assets/images/footer/bg.jpg)">
-			<div class="footer__newsletter wow fadeInUp" data-wow-duration="1.5s">
-				<div class="container">
-					<div class="row g-4 justify-content-center">
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area">
-								<div class="footer__newsletter--title">
-									<h4>Newsletter Sign up</h4>
-								</div>
-								<div class="footer__newsletter--form">
-									<form action="#">
-										<input type="email" placeholder="Your email address">
-										<button type="submit" class="default-btn"><span>Subscribe</span></button>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area justify-content-xxl-end">
-								<div class="footer__newsletter--title me-xl-4">
-									<h4>Join Community</h4>
-								</div>
-								<div class="footer__newsletter--social">
-									<ul>
-										<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer__toparea padding-top padding-bottom wow fadeInUp" data-wow-duration="1.5s">
-				<div class="container">
-					<div class="row g-4">
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item footer--about">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>About Datenight Events</h4>
-										</div>
-										<div class="footer__content--desc">
-											<p>Datenight Events is a friendly dating theme based on HTML template for the community functionality</p>
-										</div>
-										<div class="footer__content--info">
-											<p><b>Address :</b> Suite-13 Tropical Center New Elephant Road 1205</p>
-											<p><b>Contact :</b> +30 226 4881 514 www.yoursitename.com</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item footer--feature">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Featured Members</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li>
-													<div class="thumb position-relative">
-														<img src="assets/images/footer/feature/01.jpg" alt="member-img">
-														<span class="feature__activity"></span>
-													</div>
-													<div class="content">
-														<a href="member-single.html"><h6>Samantha Lee</h6></a>
-														<p>Active</p>
-													</div>
-												</li>
-												<li>
-													<div class="thumb position-relative">
-														<img src="assets/images/footer/feature/02.jpg" alt="member-img">
-														<span class="feature__activity feature__activity--ofline"></span>
-													</div>
-													<div class="content">
-														<a href="member-single.html"><h6>Peter McMillan</h6></a>
-														<p>2 Hours Ago</p>
-													</div>
-												</li>
-												<li>
-													<div class="thumb position-relative">
-														<img src="assets/images/footer/feature/03.jpg" alt="member-img">
-														<span class="feature__activity"></span>
-													</div>
-													<div class="content">
-														<a href="member-single.html"><h6>Tluagtea Tualzik</h6></a>
-														<p>Active</p>
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item footer--support">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Contacts & Support</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> About Us</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Our Team</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Testimonials</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Get in Touch</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> FAQ</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item footer--activity">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Recent Activity</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li>
-													<div class="thumb">
-														<a href="group-single.html"><img src="assets/images/footer/activity/01.jpg" alt="dating thumb"></a>
-													</div>
-													<div class="content">
-														<a href="group-single.html"><h6>Where to find a good...</h6></a>
-														<p>August 13, 2022</p>
-													</div>
-												</li>
-												<li>
-													<div class="thumb">
-														<a href="group-single.html"><img src="assets/images/footer/activity/02.jpg" alt="dating thumb"></a>
-													</div>
-													<div class="content">
-														<a href="group-single.html"><h6>Where to find a good...</h6></a>
-														<p>August 13, 2022</p>
-													</div>
-												</li>
-												<li>
-													<div class="thumb">
-														<a href="group-single.html"><img src="assets/images/footer/activity/03.jpg" alt="dating thumb"></a>
-													</div>
-													<div class="content">
-														<a href="group-single.html"><h6>Where to find a good...</h6></a>
-														<p>August 13, 2022</p>
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
+<!-- ================> Footer section start here <================== -->
+<footer class="footer footer--style3">
+	<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg6.png)">
+		<div class="footer__toparea padding-top padding-bottom">
 			<div class="container">
-				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+				<div class="row g-4">
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--about">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>About Datenight Events</h4>
+									</div>
+									<div class="footer__content--desc">
+										<p>Datenight Events is a friendly dating theme based on HTML template for the community functionality</p>
+									</div>
+									<div class="footer__content--info">
+										<p><b>Address :</b> Suite-13 Tropical Center New Elephant Road 1205</p>
+										<p><b>Contact :</b> +30 226 4881 514 www.yoursitename.com</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--feature">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Featured Members</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/01.jpg" alt="member-img">
+													<span class="feature__activity"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Samantha Lee</h6></a>
+													<p>Active</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/02.jpg" alt="member-img">
+													<span class="feature__activity feature__activity--ofline"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Peter McMillan</h6></a>
+													<p>2 Hours Ago</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/03.jpg" alt="member-img">
+													<span class="feature__activity"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Tluagtea Tualzik</h6></a>
+													<p>Active</p>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--support">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Contacts & Support</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> About Us</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Our Team</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Testimonials</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Get in Touch</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> FAQ</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--activity">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Recent Activity</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/01.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/02.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/03.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
-    <!-- ================> Footer section end here <================== -->
+	</div>
+	
+	<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
+		<div class="container">
+			<div class="row g-4 g-lg-0 justify-content-lg-between align-items-center">
+				<div class="col-lg-6 col-12">
+					<div class="footer__content text-center">
+						<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+					</div>
+				</div>
+				<div class="col-lg-6 col-12">
+					<div class="footer__newsletter--social">
+						<ul class="justify-content-center justify-content-lg-end">
+							<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- ================> Footer section end here <================== -->
 
 	
 	<!-- All Needed JS -->
