--- a/blog-single.html
+++ b/blog-single.html
@@ -473,45 +473,10 @@
 
 
 
-    <!-- ================> Footer section start here <================== -->
-	<footer class="footer footer--style2">
-		<div class="footer__top bg_img" style="background-image: url(assets/images/footer/bg.jpg)">
-			<div class="footer__newsletter">
-				<div class="container">
-					<div class="row g-4 justify-content-center">
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area">
-								<div class="footer__newsletter--title">
-									<h4>Newsletter Sign up</h4>
-								</div>
-								<div class="footer__newsletter--form">
-									<form action="#">
-										<input type="email" placeholder="Your email address">
-										<button type="submit" class="default-btn"><span>Subscribe</span></button>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area justify-content-xxl-end">
-								<div class="footer__newsletter--title me-xl-4">
-									<h4>Join Community</h4>
-								</div>
-								<div class="footer__newsletter--social">
-									<ul>
-										<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer__toparea padding-top padding-bottom wow fadeInUp" data-wow-duration="1.5s">
+   <!-- ================> Footer section start here <================== -->
+	<footer class="footer footer--style3">
+		<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg6.png)">
+			<div class="footer__toparea padding-top padding-bottom">
 				<div class="container">
 					<div class="row g-4">
 						<div class="col-lg-3 col-sm-6 col-12">
@@ -644,10 +609,25 @@
 			</div>
 		</div>
 		
-		<div class="footer__bottom py-4">
+		<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
 			<div class="container">
-				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+				<div class="row g-4 g-lg-0 justify-content-lg-between align-items-center">
+					<div class="col-lg-6 col-12">
+						<div class="footer__content text-center">
+							<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+						</div>
+					</div>
+					<div class="col-lg-6 col-12">
+						<div class="footer__newsletter--social">
+							<ul class="justify-content-center justify-content-lg-end">
+								<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+								<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
