--- a/policy.html
+++ b/policy.html
@@ -248,142 +248,166 @@
     </section>
     <!-- ================> terms section end here <================== -->
 
-
-    <!-- ================> Footer section start here <================== -->
-	<footer class="footer">
-		<div class="footer__top bg_img" style="background-image: url(assets/images/footer/bg-3.jpg)">
-			<div class="footer__newsletter wow fadeInUp" data-wow-duration="1.5s">
-				<div class="container">
-					<div class="row g-4 justify-content-center">
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area">
-								<div class="footer__newsletter--title">
-									<h4>Newsletter Sign up</h4>
-								</div>
-								<div class="footer__newsletter--form">
-									<form action="#">
-										<input type="email" placeholder="Your email address">
-										<button type="submit" class="default-btn"><span>Subscribe</span></button>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-12">
-							<div class="footer__newsletter--area justify-content-xxl-end">
-								<div class="footer__newsletter--title me-xl-4">
-									<h4>Join Community</h4>
-								</div>
-								<div class="footer__newsletter--social">
-									<ul>
-										<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer__toparea padding-top padding-bottom wow fadeInUp" data-wow-duration="1.5s">
-				<div class="container">
-					<div class="row g-5 g-lg-0">
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Our Information</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> About Us</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Contact Us</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Customer Reviews</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Success Stories</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Business License</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>My Account</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Manage Account</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Safety Tips</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Account Varification</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Safety and Security</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Membership Level</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Help Center</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Help center</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> FAQ</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Quick Start Guide</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Tutorials</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Associate Blog</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6 col-12">
-							<div class="footer__item">
-								<div class="footer__inner">
-									<div class="footer__content">
-										<div class="footer__content--title">
-											<h4>Community</h4>
-										</div>
-										<div class="footer__content--desc">
-											<ul>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Privacy policy</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> End User Agreements</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Refund Policy</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Cookie policy</a></li>
-												<li><a href="#"><i class="fa-solid fa-angle-right"></i> Report abuse</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
+<!-- ================> Footer section start here <================== -->
+<footer class="footer footer--style3">
+	<div class="footer__top bg_img wow fadeInUp" data-wow-duration="1.5s" style="background-image: url(assets/images/footer/bg6.png)">
+		<div class="footer__toparea padding-top padding-bottom">
 			<div class="container">
-				<div class="footer__content text-center">
-					<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+				<div class="row g-4">
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--about">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>About Datenight Events</h4>
+									</div>
+									<div class="footer__content--desc">
+										<p>Datenight Events is a friendly dating theme based on HTML template for the community functionality</p>
+									</div>
+									<div class="footer__content--info">
+										<p><b>Address :</b> Suite-13 Tropical Center New Elephant Road 1205</p>
+										<p><b>Contact :</b> +30 226 4881 514 www.yoursitename.com</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--feature">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Featured Members</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/01.jpg" alt="member-img">
+													<span class="feature__activity"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Samantha Lee</h6></a>
+													<p>Active</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/02.jpg" alt="member-img">
+													<span class="feature__activity feature__activity--ofline"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Peter McMillan</h6></a>
+													<p>2 Hours Ago</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb position-relative">
+													<img src="assets/images/footer/feature/03.jpg" alt="member-img">
+													<span class="feature__activity"></span>
+												</div>
+												<div class="content">
+													<a href="member-single.html"><h6>Tluagtea Tualzik</h6></a>
+													<p>Active</p>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--support">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Contacts & Support</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> About Us</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Our Team</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Testimonials</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> Get in Touch</a></li>
+											<li><a href="#"><i class="fa-solid fa-angle-right"></i> FAQ</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 col-12">
+						<div class="footer__item footer--activity">
+							<div class="footer__inner">
+								<div class="footer__content">
+									<div class="footer__content--title">
+										<h4>Recent Activity</h4>
+									</div>
+									<div class="footer__content--desc">
+										<ul>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/01.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/02.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+											<li>
+												<div class="thumb">
+													<a href="group-single.html"><img src="assets/images/footer/activity/03.jpg" alt="dating thumb"></a>
+												</div>
+												<div class="content">
+													<a href="group-single.html"><h6>Where to find a good...</h6></a>
+													<p>August 13, 2022</p>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
-    <!-- ================> Footer section end here <================== -->
+	</div>
+	
+	<div class="footer__bottom wow fadeInUp" data-wow-duration="1.5s">
+		<div class="container">
+			<div class="row g-4 g-lg-0 justify-content-lg-between align-items-center">
+				<div class="col-lg-6 col-12">
+					<div class="footer__content text-center">
+						<p class="mb-0">All Rights Reserved &copy; <a href="index.html">Datenight Events</a> || Design By: Aowebtech</p>
+					</div>
+				</div>
+				<div class="col-lg-6 col-12">
+					<div class="footer__newsletter--social">
+						<ul class="justify-content-center justify-content-lg-end">
+							<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+							<li><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- ================> Footer section end here <================== -->
 
 	
 	<!-- All Needed JS -->
